1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.m: Don't include FArguments.h.

	* defobj.h (Serialization): Move -lispIn: and -hdf5In:
	to setting phase.
	(FArguments): Add.

	* DefObject.m ([Object_s -{lisp,hdf5}In:]): Likewise.

1999-04-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m: Make jniEnv be global.  This is to avoid unresolved
	symbols when the support shared libraries for Java are not used.

1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.m: Include swarmconfig.h.
	([FArguments -_addArgument_:ofType:]): Initialize size to avoid
	warning.
	([FArguments -mapAllocations:]): Set mapalloc->size before
	each mapAlloc on a block.

1999-04-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -getRetVal:buf:]): Handle jobject in both cases.

	* Makefile.am (JAVAINCLUDES): Add $(top_srcdir)/java/c and
	$(top_builddir)/libobjc.

	* FArguments.m: Include jni.h and declare jniEnv extern.
	([FArguments -_addArgument_:ofType:]): Use variable offset instead
	of recomputing it several times.  Handle conversion of
	fcall_type_object to fcall_type_jobject when javaFlag is set.
	([FArguments -_setReturnType_:]): Handle void case.  Convert
	fcall_type_object to fcall_type_jobject if javaFlag is set.
	Handle fcall_type_jobject.

	* FArguments.[hm] ([FArguments -setJavaFlag:]): New ivar and setter.

	* FCall.m ([FCall_c -createEnd]): Add method name and signature
	to error message.

	* DefObject.m ([Object_s -forward::]): Moved from JavaProxy (also
	relevant header file includes).

1999-04-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m (jniEnv): Make extern.

1999-04-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h (types_t): New typedef.

	* FCall.[hm], defobj.h ([FCall_c -getRetVal:buf:]): New method
	(replaces getReturnVal).  Use __builtin_apply unless it's broken.
	In that case, try to set argFrame[0].arg_ptr by hand.

	* FCall.[hm] (FCall): Remove result. 
