@@ -1,5 +1,14 @@
 1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* defobj.m (_defobj_implement): Set FArguments implemented type.
+
+	* Makefile.am (JAVAINCLUDES): New variable.
+	(INCLUDES): use it.
+
+	* FArguments.[hm]: Renamed to FArguments_c. 
+
+	* FCall.[hm]: Accomodate.
+
 	* DefObject.m: Don't include FArguments.h.
 
 	* defobj.h (Serialization): Move -lispIn: and -hdf5In:
